@@ -2,18 +2,20 @@ package cloudgene.mapred.apps;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import cloudgene.mapred.plugins.IPlugin;
 import cloudgene.mapred.plugins.PluginManager;
-import cloudgene.mapred.util.Configuration;
+import cloudgene.mapred.util.config.Configuration;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import jakarta.annotation.Nullable;
+import jakarta.validation.constraints.NotNull;
 import org.apache.commons.io.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -51,7 +53,7 @@ public class ApplicationRepository {
 	public static int DATASETS = 4;
 
 	public ApplicationRepository() {
-		apps = new Vector<Application>();
+		apps = new ArrayList<>();
 		reload();
 	}
 
@@ -63,37 +65,31 @@ public class ApplicationRepository {
 		return apps;
 	}
 
-	public void setApps(List<Application> apps) {
+	public void setApps(@NotNull List<Application> apps) {
 		this.apps = apps;
 		reload();
 	}
 
 	public void reload() {
-		indexApps = new HashMap<String, Application>();
+		indexApps = new HashMap<>();
 		log.info("Reload applications...");
+
 		for (Application app : apps) {
 			try {
-				log.info("Load workflow file " + app.getFilename());
+				log.info("Load workflow file {}", app.getFilename());
 				app.loadWdlApp();
-				WdlApp wdlApp = app.getWdlApp();
-				// update wdl id with id from application
-				/*if (wdlApp != null) {
-					wdlApp.setId(app.getId());
-				}*/
-				log.info("Application " + app.getId() + " loaded.");
+				log.info("Application {} loaded.", app.getId());
 			} catch (IOException e) {
-				log.error("Application " + app.getFilename() + " has syntax errors.", e);
+				log.error("Application {} has syntax errors.", app.getFilename(), e);
 			}
 			indexApps.put(app.getId(), app);
-
 		}
 
 		Collections.sort(apps);
-		log.info("Loaded " + apps.size() + " applications.");
+		log.info("Loaded {} applications.", apps.size());
 	}
 
 	public Application getByIdAndUser(String id, User user) {
-
 		Application application = getById(id);
 
 		if (hasAccess(user, application) && isActivated(application)) {
@@ -101,23 +97,22 @@ public class ApplicationRepository {
 		}
 
 		return null;
-
 	}
 
 	public Application getById(String id) {
-
 		Application application = indexApps.get(id);
 		if (application != null) {
 			return application;
 		}
 
 		// try without version
-		List<Application> versions = new Vector<Application>();
-		for (Application app: apps) {
+		List<Application> versions = new ArrayList<>();
+		for (Application app : apps) {
 			if (id.equals(app.getWdlApp().getId())) {
 				versions.add(app);
 			}
 		}
+
 		if (versions.isEmpty()) {
 			return null;
 		}
@@ -133,44 +128,41 @@ public class ApplicationRepository {
 		}
 
 		return latest;
-
 	}
 
-	public List<Application> getAllByUser(User user, int filter) {
-
-		List<Application> listApps = new Vector<Application>();
+	public List<Application> getAllByUser(@Nullable User user, int filter) {
+		List<Application> listApps = new ArrayList<>();
 
 		for (Application application : getAll()) {
 
-            if (!hasAccess(user, application) || !isActivated(application)) {
-                continue;
-            }
+			if (!hasAccess(user, application) || !isActivated(application)) {
+				continue;
+			}
 
-            WdlApp wdlApp = application.getWdlApp();
+			WdlApp wdlApp = application.getWdlApp();
 
-            if (filter == APPS_AND_DATASETS) {
-                listApps.add(application);
-            } else if (filter == APPS && wdlApp.getWorkflow() != null) {
+			if (filter == APPS_AND_DATASETS) {
+				listApps.add(application);
+			} else if (filter == APPS && wdlApp.getWorkflow() != null) {
 				listApps.add(application);
 
-            } else if (filter == DATASETS && wdlApp.getWorkflow() != null) {
+			} else if (filter == DATASETS && wdlApp.getWorkflow() != null) {
 				listApps.add(application);
-            }
+			}
 
-        }
+		}
 
 		Collections.sort(listApps);
 		return listApps;
-
 	}
 
-	public void remove(Application application) throws IOException {
+	public void remove(@NotNull Application application) throws IOException {
 		log.info("Remove application " + application.getId());
 		apps.remove(application);
 		reload();
 	}
 
-	public void updateConfig(Application app, Map<String, String> config) throws IOException {
+	public void updateConfig(@NotNull Application app, @Nullable Map<String, String> config) throws IOException {
 
 		WdlApp wdlApp = app.getWdlApp();
 
@@ -178,12 +170,12 @@ public class ApplicationRepository {
 			return;
 		}
 
-		for (IPlugin plugin: PluginManager.getInstance().getPlugins()) {
+		for (IPlugin plugin : PluginManager.getInstance().getPlugins()) {
 			Map<String, String> updatedConfig = plugin.getConfig(wdlApp);
 			if (updatedConfig == null) {
 				continue;
 			}
-			for (String key: config.keySet()){
+			for (String key : config.keySet()) {
 				updatedConfig.put(key, config.get(key));
 			}
 			plugin.updateConfig(wdlApp, updatedConfig);
@@ -191,23 +183,18 @@ public class ApplicationRepository {
 
 	}
 
-	public List<Application> install(String url) throws IOException, GitHubException {
+	public List<Application> install(@NotNull String url) throws IOException, GitHubException, URISyntaxException {
 
 		List<Application> applications = new ArrayList<>();
 		Application application = null;
 		if (url.startsWith("http://") || url.startsWith("https://")) {
-			return  installFromUrl(url);
+			return installFromUrl(url);
 		} else if (url.startsWith("s3://")) {
 			application = installFromS3(url);
 		} else if (url.startsWith("github://")) {
 
 			String repo = url.replace("github://", "");
-
 			Repository repository = GitHubUtil.parseShorthand(repo);
-			if (repository == null) {
-				throw new GitHubException(repo + " is not a valid GitHub repo.");
-			}
-
 			application = installFromGitHub(repository);
 
 		} else {
@@ -226,14 +213,8 @@ public class ApplicationRepository {
 
 			} else {
 				String repo = url.replace("github://", "");
-
 				Repository repository = GitHubUtil.parseShorthand(repo);
-				if (repository == null) {
-					throw new GitHubException(repo + " is not a valid GitHub repo.");
-				}
-
 				application = installFromGitHub(repository);
-
 			}
 		}
 		if (application != null) {
@@ -243,49 +224,78 @@ public class ApplicationRepository {
 
 	}
 
-	public List<Application> installFromUrl(String url) throws IOException, GitHubException {
+	/**
+	 * Returns the path {@code {appsFolder}/archive_{hash}.zip}, where
+	 * {@code hash} is calculated from the provided {@code key}.
+	 *
+	 * @param key Used to uniquely identify the download, to avoid collisions.
+	 * @return Path to a (potential) archive file unique to the {@code key}'s hash.
+	 */
+	private File getArchiveFile(@NotNull String key) {
+		int hash = key.hashCode();
+		String path = FileUtil.path(appsFolder, "archive_" + hash + ".zip");
+		return new File(path);
+	}
+
+	public List<Application> installFromUrl(@NotNull String url)
+			throws IOException, GitHubException, URISyntaxException {
 
 		if (!url.endsWith(".zip")) {
 			return installFromUrlRepository(url);
-        }
+		}
 
 		// download file from url
-		File zipFile = new File(FileUtil.path(appsFolder, "archive.zip"));
-        FileUtils.copyURLToFile(new URL(url), zipFile);
-        Application application = installFromZipFile(zipFile.getAbsolutePath());
-        zipFile.delete();
-		List<Application> applications = new Vector<Application>();
-		applications.add(application);
-        return applications;
-    }
+		File zipFile = getArchiveFile(url);
+		URI uri = new URI(url);
+		FileUtils.copyURLToFile(uri.toURL(), zipFile);
 
-	public List<Application> installFromUrlRepository(String url) throws IOException, GitHubException {
+		Application application = installFromZipFile(zipFile.getAbsolutePath());
+
+		zipFile.delete();
+
+		List<Application> applications = new ArrayList<>();
+		applications.add(application);
+
+		return applications;
+	}
+
+	public List<Application> installFromUrlRepository(@NotNull String url)
+			throws IOException, GitHubException, URISyntaxException {
+
 		Pattern pattern = Pattern.compile("@([^/\\?]*)");
 		Matcher matcher = pattern.matcher(url);
+
 		String version = "latest";
 		if (matcher.find()) {
 			version = matcher.group(1);
 			url = url.replace(matcher.group(0), "");
 		}
-		String filename = File.createTempFile("repo", ".json").getAbsolutePath();
-		FileUtils.copyURLToFile(new URL(url), new File(filename));
+
+		File file = File.createTempFile("repo", ".json");
+		String filename = file.getAbsolutePath();
+		URI uri = new URI(url);
+
+		FileUtils.copyURLToFile(uri.toURL(), file);
 		return installFromRepository(filename, version);
 	}
 
-	public List<Application> installFromRepository(String file, String version) throws IOException, GitHubException {
+	public List<Application> installFromRepository(@NotNull String file, String version)
+			throws IOException, GitHubException, URISyntaxException {
+
 		ObjectMapper mapper = new ObjectMapper();
 		JsonNode root = mapper.readTree(new File(file));
 		String type = root.path("type").asText();
 		JsonNode releases = root.path("releases");
 
-		if (!releases.isArray() || releases.size() == 0) {
+		if (!releases.isArray() || releases.isEmpty()) {
 			throw new IOException("No releases found.");
 		}
 
 		JsonNode release = getVersion(releases, version);
-		if (release == null ) {
+		if (release == null) {
 			throw new IOException("Version " + version + " not found.");
 		}
+
 		switch (type) {
 			case "application": {
 				String url = release.path("url").asText();
@@ -295,14 +305,16 @@ public class ApplicationRepository {
 			case "pack": {
 				JsonNode content = release.path("content");
 				if (content.isArray()) {
-					List<Application> applications = new Vector<Application>();
+					List<Application> applications = new ArrayList<>();
 					for (JsonNode item : content) {
 						String itemUrl = item.path("url").asText();
 						System.out.println("Installing application from " + itemUrl + "...");
 						List<Application> installedApplications = install(itemUrl);
-						if (item.has("config") && item.hasNonNull("config")){
-							Map<String, String> config = mapper.convertValue(item.get("config"), new TypeReference<Map<String, String>>() {});
-							for (Application application: installedApplications) {
+						if (item.has("config") && item.hasNonNull("config")) {
+							Map<String, String> config = mapper.convertValue(
+									item.get("config"),
+									new TypeReference<Map<String, String>>() {});
+							for (Application application : installedApplications) {
 								System.out.println("Configure application " + application.getId());
 								updateConfig(application, config);
 							}
@@ -321,9 +333,11 @@ public class ApplicationRepository {
 	public Application installFromS3(String url) throws IOException {
 		// download file from s3 bucket
 		if (url.endsWith(".zip")) {
-			File zipFile = new File(FileUtil.path(appsFolder, "archive.zip"));
+			File zipFile = getArchiveFile(url);
 			S3Util.copyToFile(url, zipFile);
+
 			Application application = installFromZipFile(zipFile.getAbsolutePath());
+
 			zipFile.delete();
 			return application;
 		}
@@ -339,7 +353,6 @@ public class ApplicationRepository {
 
 		// create folders
 		for (S3ObjectSummary summary : listing.getObjectSummaries()) {
-
 			String bucket = summary.getBucketName();
 			String key = summary.getKey();
 
@@ -351,12 +364,10 @@ public class ApplicationRepository {
 			String relativeKey = summary.getKey().replaceAll(baseKey, "");
 			String target = FileUtil.path(appPath, relativeKey);
 			FileUtil.createDirectory(target);
-
 		}
 
-		//copy files
+		// copy files
 		for (S3ObjectSummary summary : listing.getObjectSummaries()) {
-
 			String bucket = summary.getBucketName();
 			String key = summary.getKey();
 
@@ -365,17 +376,19 @@ public class ApplicationRepository {
 			}
 
 			System.out.println("Found file" + bucket + "/" + key);
+
 			String relativeKey = summary.getKey().replaceAll(baseKey, "");
 			String target = FileUtil.path(appPath, relativeKey);
 			File file = new File(target);
+
 			// create parent folder
 			File parent = file.getParentFile();
 			if (!parent.exists()) {
 				parent.mkdirs();
 			}
+
 			System.out.println("Copy file from " + bucket + "/" + key + " to " + target);
 			S3Util.copyToFile(bucket, key, file);
-
 		}
 
 		try {
@@ -383,35 +396,38 @@ public class ApplicationRepository {
 		} finally {
 			FileUtil.deleteDirectory(appPath);
 		}
-
-
 	}
 
-	public Application installFromGitHub(Repository repository) throws MalformedURLException, IOException {
+	public Application installFromGitHub(@NotNull Repository repository)
+			throws IOException, URISyntaxException, GitHubException {
 
 		String url = GitHubUtil.buildUrlFromRepository(repository);
-		File zipFile = new File(FileUtil.path(appsFolder, "archive.zip"));
-		FileUtils.copyURLToFile(new URL(url), zipFile);
+		File zipFile = getArchiveFile(url);
+		URI uri = new URI(url);
+
+		FileUtils.copyURLToFile(uri.toURL(), zipFile);
 
 		String zipFilename = zipFile.getAbsolutePath();
 		Application application = installFromZipFile(zipFilename, repository.getYaml());
+
 		zipFile.delete();
 		return application;
-
 	}
 
-	public Application installFromZipFile(String zipFilename) throws IOException {
-
+	public Application installFromZipFile(@NotNull String zipFilename) throws IOException {
 		return installFromZipFile(zipFilename, null);
 	}
 
-
-	public Application installFromZipFile(String zipFilename, String yamlFilename) throws IOException {
+	public Application installFromZipFile(@NotNull String zipFilename, @Nullable String yamlFilename)
+			throws IOException {
 
 		// extract in apps folder
-		String appPath = FileUtil.path(appsFolder, "archive");
+		int hash = zipFilename.hashCode();
+		String appPath = FileUtil.path(appsFolder, "archive_" + hash);
+
 		FileUtil.deleteDirectory(appPath);
 		FileUtil.createDirectory(appPath);
+
 		try {
 			ZipFile file = new ZipFile(zipFilename);
 			file.extractAll(appPath);
@@ -425,14 +441,14 @@ public class ApplicationRepository {
 		} finally {
 			FileUtil.deleteDirectory(appPath);
 		}
-
 	}
 
-	public Application installFromDirectory(String path, boolean moveToApps) throws IOException {
+	public Application installFromDirectory(@NotNull String path, boolean moveToApps) throws IOException {
 		return installFromDirectory(path, moveToApps, null);
 	}
 
-	public Application installFromDirectory(String path, boolean moveToApps, String customYaml) throws IOException {
+	public Application installFromDirectory(@NotNull String path, boolean moveToApps, @Nullable String customYaml)
+			throws IOException {
 
 		String name = "cloudgene.yaml";
 		if (customYaml != null) {
@@ -442,12 +458,12 @@ public class ApplicationRepository {
 		String cloudgeneFilename = FileUtil.path(path, name);
 		if (new File(cloudgeneFilename).exists()) {
 			Application application = installFromYaml(cloudgeneFilename, moveToApps);
-				if (application != null) {
-					return application;
+			if (application != null) {
+				return application;
 			}
 		}
 
-		//No cloudgene.yaml found. try all other yaml files.
+		// No cloudgene.yaml found. try all other yaml files.
 		String[] files = FileUtil.getFiles(path, "*.yaml");
 		for (String filename : files) {
 			Application application = installFromYaml(filename, moveToApps);
@@ -463,8 +479,8 @@ public class ApplicationRepository {
 				return application;
 			}
 		}
-		return null;
 
+		return null;
 	}
 
 	public Application installFromYaml(String filename, boolean moveToApps) throws IOException {
@@ -472,6 +488,7 @@ public class ApplicationRepository {
 		Application application = new Application();
 		application.setFilename(filename);
 		application.setPermission("user");
+
 		try {
 			application.loadWdlApp();
 		} catch (IOException e) {
@@ -485,7 +502,6 @@ public class ApplicationRepository {
 		}
 
 		if (moveToApps) {
-
 			File file = new File(filename);
 			File folder = file.getParentFile();
 
@@ -508,18 +524,15 @@ public class ApplicationRepository {
 				log.warn("Ignore file " + filename + ". Not a valid cloudgene file.", e);
 				return null;
 			}
-
 		}
 
 		apps.add(application);
-
 		indexApps.put(application.getId(), application);
 
 		return application;
-
 	}
 
-	private String[] getDirectories(String path) {
+	private String[] getDirectories(@NotNull String path) {
 		File dir = new File(path);
 		File[] files = dir.listFiles();
 
@@ -552,7 +565,7 @@ public class ApplicationRepository {
 		return FileUtil.path(CONFIG_PATH, app.getId(), app.getVersion());
 	}
 
-	public boolean hasAccess(User user, Application application) {
+	public boolean hasAccess(@Nullable User user, @Nullable Application application) {
 		if (application == null || user == null) {
 			return false;
 		}
@@ -566,16 +579,17 @@ public class ApplicationRepository {
 		return application.isEnabled() && application.isLoaded() && !application.hasSyntaxError();
 	}
 
-	public static JsonNode getVersion(JsonNode releases, String version) {
+	public static JsonNode getVersion(@NotNull JsonNode releases, @Nullable String version) {
 		if ("latest".equalsIgnoreCase(version)) {
 			return releases.get(0);
 		}
+
 		for (JsonNode release : releases) {
 			if (release.has("version") && release.get("version").asText().equals(version)) {
 				return release;
 			}
 		}
+
 		return null;
 	}
-
 }
