@@ -2,7 +2,10 @@ package cloudgene.mapred.server.services;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
+import cloudgene.mapred.database.CounterDao;
+import jakarta.validation.constraints.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -16,69 +19,49 @@ import cloudgene.mapred.util.HashUtil;
 import cloudgene.mapred.util.MailUtil;
 import cloudgene.mapred.util.Page;
 import io.micronaut.http.HttpStatus;
-import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
 
 @Singleton
 public class UserService {
 
-	private static Logger log = LoggerFactory.getLogger(UserService.class);
+	private static final Logger log = LoggerFactory.getLogger(UserService.class);
 
 	public static final String MESSAGE_USER_NOT_FOUND = "User %s not found.";
-
-	private static final String MESSAGE_USER_PROFILE_DELETE = "User profile successfully delete.";
-
-	private static final String MESSAGE_DELETE_ERROR = "Error during deleting your user profile.";
-
-	private static final String MESSAGE_WRONG_PASSWORD = "Wrong password.";
-
-	private static final String MESSAGE_PROFILE_UPDATED = "User profile successfully updated.";
-
-	private static final String MESSAGE_NOT_ALLOWED = "You are not allowed to change this user profile.";
-
-	private static final String MESSAGE_NO_USERNAME_SET = "No username set.";
-
-	private static final String MESSAGE_PASSWORD_UPDATED = "Password successfully updated.";
-
-	private static final String MESSAGE_INVALID_RECOVERY_REQUEST = "Your recovery request is invalid or expired.";
-
-	private static final String MESSAGE_ACCOUNT_IS_INACTIVE = "Account is not activated.";
-
-	private static final String MESSAGE_ACCOUNT_NOT_FOUND = "We couldn't find an account with that username or email.";
-
-	private static final String MESSAGE_EMAIL_SENT = "We sent you an email with instructions on how to reset your password.";
-
-	private static final String MESSAGE_EMAIL_NOT_AVAILABLE = "No email address is associated with the provided username. Therefore, password recovery cannot be completed.";
-
-	private static final String MESSAGE_SENDING_EMAIL_FAILED = "Sending recovery email failed. ";
-
-	private static final String MESSAGE_INVALID_USERNAME = "Please enter a valid username or email address.";
-
-	private static final String MESSAGE_USER_CREATED = "User successfully created.";
-
-	private static final String MESSAGE_EMAIL_ALREADY_REGISTERED = "E-Mail is already registered.";
-
-	private static final String MESSAGE_USERNAME_ALREADY_EXISTS = "Username already exists.";
-
-	private static final String MESSAGE_WRONG_USERNAME = "Wrong username.";
-
-	private static final String MESSAGE_WRONG_ACTIVATION_CODE = "Wrong activation code.";
-
-	private static final String MESSAGE_USER_ACTIVATED = "User successfully activated.";
-
 	public static final String DEFAULT_ROLE = "User";
-
 	public static final String DEFAULT_ANONYMOUS_ROLE = "Anonymous_User";
 
-	@Inject
+	private static final String MESSAGE_USER_PROFILE_DELETE = "User profile successfully delete.";
+	private static final String MESSAGE_DELETE_ERROR = "Error during deleting your user profile.";
+	private static final String MESSAGE_WRONG_PASSWORD = "Wrong password.";
+	private static final String MESSAGE_PROFILE_UPDATED = "User profile successfully updated.";
+	private static final String MESSAGE_NOT_ALLOWED = "You are not allowed to change this user profile.";
+	private static final String MESSAGE_NO_USERNAME_SET = "No username set.";
+	private static final String MESSAGE_PASSWORD_UPDATED = "Password successfully updated.";
+	private static final String MESSAGE_INVALID_RECOVERY_REQUEST = "Your recovery request is invalid or expired.";
+	private static final String MESSAGE_ACCOUNT_IS_INACTIVE = "Account is not activated.";
+	private static final String MESSAGE_ACCOUNT_NOT_FOUND = "We couldn't find an account with that username or email.";
+	private static final String MESSAGE_EMAIL_SENT = "We sent you an email with instructions on how to reset your password.";
+	private static final String MESSAGE_EMAIL_NOT_AVAILABLE = "No email address is associated with the provided username. Therefore, password recovery cannot be completed.";
+	private static final String MESSAGE_SENDING_EMAIL_FAILED = "Sending recovery email failed. ";
+	private static final String MESSAGE_INVALID_USERNAME = "Please enter a valid username or email address.";
+	private static final String MESSAGE_USER_CREATED = "User successfully created.";
+	private static final String MESSAGE_EMAIL_ALREADY_REGISTERED = "E-Mail is already registered.";
+	private static final String MESSAGE_USERNAME_ALREADY_EXISTS = "Username already exists.";
+	private static final String MESSAGE_WRONG_USERNAME = "Wrong username.";
+	private static final String MESSAGE_WRONG_ACTIVATION_CODE = "Wrong activation code.";
+	private static final String MESSAGE_USER_ACTIVATED = "User successfully activated.";
+
 	protected Application application;
 
+	public UserService(Application application) {
+		this.application = application;
+	}
+
 	public Page<User> getAll(String query, String page, int pageSize) {
-
 		int offset = 0;
-		if (page != null) {
 
-			offset = Integer.valueOf(page);
+		if (page != null) {
+			offset = Integer.parseInt(page);
 			if (offset < 1) {
 				offset = 1;
 			}
@@ -87,8 +70,8 @@ public class UserService {
 
 		UserDao dao = new UserDao(application.getDatabase());
 
-		List<User> users = null;
-		int count = 0;
+		List<User> users;
+		int count;
 
 		if (query != null && !query.isEmpty()) {
 			users = dao.findByQuery(query);
@@ -107,22 +90,24 @@ public class UserService {
 			}
 		}
 
-		Page<User> result = new Page<User>();
+		Page<User> result = new Page<>();
+
 		result.setCount(count);
 		result.setPage(Integer.parseInt(page));
 		result.setPageSize(pageSize);
 		result.setData(users);
 
 		return result;
-
 	}
 
 	public User getByUsername(String username) {
 		UserDao dao = new UserDao(application.getDatabase());
 		User user = dao.findByUsername(username);
+
 		if (user == null) {
 			throw new JsonHttpStatusException(HttpStatus.NOT_FOUND, String.format(MESSAGE_USER_NOT_FOUND, username));
 		}
+
 		return user;
 	}
 
@@ -139,8 +124,13 @@ public class UserService {
 		return user;
 	}
 
-	public MessageResponse updateProfile(User user, String username, String full_name, String mail, String new_password,
-			String confirm_new_password) {
+	public MessageResponse updateProfile(
+			User user,
+			String username,
+			String fullName,
+			String mail,
+			String newPassword,
+			String confirmNewPassword) {
 
 		String error = User.checkUsername(username);
 		if (error != null) {
@@ -150,13 +140,13 @@ public class UserService {
 		// check if user is admin or it is his username
 		if (!user.getUsername().equals(username) && !user.isAdmin()) {
 
-			log.error(String.format("User: ID %s ('%s') attempted to change profile of a different user '%s'",
-					user.getId(), user.getUsername(), username));
+			log.error("User: ID {} ('{}') attempted to change profile of a different username '{}'",
+					user.getId(), user.getUsername(), username);
 
 			return MessageResponse.error(MESSAGE_NOT_ALLOWED);
 		}
 
-		error = User.checkName(full_name);
+		error = User.checkFullName(fullName);
 		if (error != null) {
 			return MessageResponse.error(error);
 		}
@@ -172,42 +162,47 @@ public class UserService {
 
 		UserDao dao = new UserDao(application.getDatabase());
 		User newUser = dao.findByUsername(username);
-		newUser.setFullName(full_name);
+		newUser.setFullName(fullName);
 		newUser.setMail(mail);
 
 		if (user.getMail() != null && !user.getMail().equals(newUser.getMail())) {
-			log.info(String.format("User: changed email address for user %s (ID %s)", newUser.getUsername(),
-					newUser.getId()));
+			log.info("User: changed email address for user {} (ID {})", newUser.getUsername(), newUser.getId());
 		}
 
 		String roleMessage = "";
 		if (!application.getSettings().isEmailRequired()) {
-			if ((newUser.getMail() == null || newUser.getMail().isEmpty()) && user.hasRole(DEFAULT_ROLE)) {
+			String newUserMail = newUser.getMail();
+			boolean newMailAvailable = (newUserMail != null && !newUserMail.isEmpty());
+
+			if (!newMailAvailable & user.hasRole(DEFAULT_ROLE)) {
 				newUser.replaceRole(DEFAULT_ROLE, DEFAULT_ANONYMOUS_ROLE);
-				log.info(String.format("User: changed role to %s for user %s (ID %s)", DEFAULT_ANONYMOUS_ROLE, newUser.getUsername(),
-						newUser.getId()));
+
+				log.info("User: changed role to {} for user {} (ID {})",
+						DEFAULT_ANONYMOUS_ROLE, newUser.getUsername(), newUser.getId());
+
 				roleMessage += "<br><br>Your account has been <b>downgraded</b>.<br>To apply these changes, please log out and log back in.";
-			} else if ((newUser.getMail() != null && !newUser.getMail().isEmpty()) && user.hasRole(DEFAULT_ANONYMOUS_ROLE)) {
+			} else if (newMailAvailable && user.hasRole(DEFAULT_ANONYMOUS_ROLE)) {
 				newUser.replaceRole(DEFAULT_ANONYMOUS_ROLE, DEFAULT_ROLE);
-				log.info(String.format("User: changed role to %s for user %s (ID %s)", DEFAULT_ROLE, newUser.getUsername(),
-						newUser.getId()));
+
+				log.info("User: changed role to {} for user {} (ID {})",
+						DEFAULT_ROLE, newUser.getUsername(), newUser.getId());
+
 				roleMessage += "<br><br>Your account has been <b>upgraded</b>.<br>To apply these changes, please log out and log back in.";
 			}
 		}
 
 		// update password only when it's not empty
-		if (new_password != null && !new_password.isEmpty()) {
-
-			error = User.checkPassword(new_password, confirm_new_password);
+		if (newPassword != null && !newPassword.isEmpty()) {
+			error = User.checkPassword(newPassword, confirmNewPassword);
 
 			if (error != null) {
 				return MessageResponse.error(error);
 			}
-			newUser.setPassword(HashUtil.hashPassword(new_password));
 
-			log.info(String.format("User: changed password for user %s (ID %s - email %s)", newUser.getUsername(),
-					newUser.getId(), newUser.getMail()));
+			newUser.setPassword(HashUtil.hashPassword(newPassword));
 
+			log.info("User: changed password for user {} (ID {} - email {})",
+					newUser.getUsername(), newUser.getId(), newUser.getMail());
 		}
 
 		dao.update(newUser);
@@ -216,7 +211,6 @@ public class UserService {
 	}
 
 	public MessageResponse deleteProfile(User user, String username, String password) {
-
 		// check if user is admin or it is his username
 		if (!user.getUsername().equals(username) && !user.isAdmin()) {
 			throw new JsonHttpStatusException(HttpStatus.FORBIDDEN, MESSAGE_NOT_ALLOWED);
@@ -226,8 +220,8 @@ public class UserService {
 
 			UserDao dao = new UserDao(application.getDatabase());
 
-			log.info(String.format("User: requested deletion of account %s (ID %s - email %s)", user.getUsername(),
-					user.getId(), user.getMail()));
+			log.info("User: requested deletion of account {} (ID {} - email {})",
+					user.getUsername(), user.getId(), user.getMail());
 
 			boolean deleted = dao.delete(user);
 			if (deleted) {
@@ -239,11 +233,13 @@ public class UserService {
 		} else {
 			throw new JsonHttpStatusException(HttpStatus.UNAUTHORIZED, MESSAGE_WRONG_PASSWORD);
 		}
-
 	}
 
-	public MessageResponse updatePassword(String username, String token, String new_password,
-			String confirm_new_password) {
+	public MessageResponse updatePassword(
+			String username,
+			String token,
+			String newPassword,
+			String confirmNewPassword) {
 
 		if (username == null || username.isEmpty()) {
 			return MessageResponse.error(MESSAGE_NO_USERNAME_SET);
@@ -260,28 +256,27 @@ public class UserService {
 			return MessageResponse.error(MESSAGE_ACCOUNT_IS_INACTIVE);
 		}
 
-		if (token == null || user.getActivationCode() == null || !user.getActivationCode().equals(token)) {
+		if (user.getActivationCode() == null || !user.getActivationCode().equals(token)) {
 			return MessageResponse.error(MESSAGE_INVALID_RECOVERY_REQUEST);
 		}
 
-		String error = User.checkPassword(new_password, confirm_new_password);
+		String error = User.checkPassword(newPassword, confirmNewPassword);
 		if (error != null) {
 			return MessageResponse.error(error);
 		}
 
-		user.setPassword(HashUtil.hashPassword(new_password));
+		user.setPassword(HashUtil.hashPassword(newPassword));
 		user.setActivationCode("");
 		dao.update(user);
 
-		log.info(String.format("User: changed password via account recovery mechanism for user %s (ID %s - email %s)",
-				user.getUsername(), user.getId(), user.getMail()));
+		log.info("User: changed password via account recovery mechanism for user {} (ID {} - email {})",
+				user.getUsername(), user.getId(), user.getMail());
 
 		return MessageResponse.success(MESSAGE_PASSWORD_UPDATED);
 	}
 
 	public MessageResponse resetPassword(String username) {
-
-		if (username == null || username.trim().isEmpty()) {
+		if (username == null || username.isBlank()) {
 			return MessageResponse.error(MESSAGE_INVALID_USERNAME);
 		}
 
@@ -293,19 +288,15 @@ public class UserService {
 		}
 
 		if (user != null) {
-
 			if (!user.isActive()) {
 				return MessageResponse.error(MESSAGE_ACCOUNT_IS_INACTIVE);
 			}
 
-			String key = "";
+			String key;
 			if (user.getActivationCode() != null && !user.getActivationCode().isEmpty()) {
-
 				// resend the same activation token
 				key = user.getActivationCode();
-
 			} else {
-
 				// create activation token
 				key = HashUtil.getActivationHash(user);
 				user.setActivationCode(key);
@@ -323,9 +314,9 @@ public class UserService {
 			String body = application.getTemplate(Template.RECOVERY_MAIL, user.getFullName(), app, link);
 
 			try {
-				if (user.getMail()!= null && !user.getMail().isEmpty()) {
+				if (user.getMail() != null && !user.getMail().isEmpty()) {
 
-					log.info(String.format("Password reset link requested for user '%s'", username));
+					log.info("Password reset link requested for user '{}'", username);
 
 					MailUtil.send(application.getSettings(), user.getMail(), subject, body);
 
@@ -333,70 +324,74 @@ public class UserService {
 				} else {
 					return MessageResponse.error(MESSAGE_EMAIL_NOT_AVAILABLE);
 				}
-
 			} catch (Exception e) {
-
 				return MessageResponse.error(MESSAGE_SENDING_EMAIL_FAILED + e.getMessage());
-
 			}
-
 		} else {
-
 			return MessageResponse.error(MESSAGE_ACCOUNT_NOT_FOUND);
-
 		}
-
 	}
 
-	public MessageResponse registerUser(String username, String mail, String new_password, String confirm_new_password,
-			String full_name) {
-		// check username
+	public MessageResponse registerUser(
+			String username,
+			String mail,
+			String newPassword,
+			String confirmNewPassword,
+			String fullName) {
+
+		// ==== USERNAME ==== //
+
+		// check username format
 		String error = User.checkUsername(username);
 		if (error != null) {
 			return MessageResponse.error(error);
 		}
+
+		// check if username available
 		UserDao dao = new UserDao(application.getDatabase());
 		if (dao.findByUsername(username) != null) {
 			return MessageResponse.error(MESSAGE_USERNAME_ALREADY_EXISTS);
 		}
 
-		// check email
+		// ==== MAIL ==== //
+
 		boolean mailProvided = (mail != null && !mail.isEmpty());
 
 		if (application.getSettings().isEmailRequired() || mailProvided) {
-			// check email
+			// Check mail format
 			error = User.checkMail(mail);
 			if (error != null) {
 				return MessageResponse.error(error);
 			}
+
+			// Check if mail available
 			if (dao.findByMail(mail) != null) {
 				return MessageResponse.error(MESSAGE_EMAIL_ALREADY_REGISTERED);
 			}
 		}
 
-		String[] roles = new String[] { mailProvided ? DEFAULT_ROLE : DEFAULT_ANONYMOUS_ROLE};
+		String[] roles = new String[] { mailProvided ? DEFAULT_ROLE : DEFAULT_ANONYMOUS_ROLE };
 
-		// check password
-		error = User.checkPassword(new_password, confirm_new_password);
+		// check password format
+		error = User.checkPassword(newPassword, confirmNewPassword);
 		if (error != null) {
 			return MessageResponse.error(error);
 		}
 
-		// check password
-		error = User.checkName(full_name);
+		// check full name format
+		error = User.checkFullName(fullName);
 		if (error != null) {
 			return MessageResponse.error(error);
 		}
 
 		User newUser = new User();
 		newUser.setUsername(username);
-		newUser.setFullName(full_name);
+		newUser.setFullName(fullName);
 		newUser.setMail(mail);
 		newUser.setRoles(roles);
-		newUser.setPassword(HashUtil.hashPassword(new_password));
+		newUser.setPassword(HashUtil.hashPassword(newPassword));
 
 		try {
-
 			String hostname = application.getSettings().getServerUrl();
 			hostname += application.getSettings().getBaseUrl();
 
@@ -404,7 +399,6 @@ public class UserService {
 			// activate user immediately.
 
 			if (application.getSettings().getMail() != null && mailProvided) {
-
 				String activationKey = HashUtil.getActivationHash(newUser);
 				newUser.setActive(false);
 				newUser.setActivationCode(activationKey);
@@ -413,64 +407,62 @@ public class UserService {
 				String appName = application.getSettings().getName();
 				String subject = "[" + appName + "] Signup activation";
 				String activationLink = hostname + "/#!activate/" + username + "/" + activationKey;
-				String body = application.getTemplate(Template.REGISTER_MAIL, full_name, appName, activationLink);
+				String body = application.getTemplate(Template.REGISTER_MAIL, fullName, appName, activationLink);
 
 				MailUtil.send(application.getSettings(), mail, subject, body);
-
 			} else {
-
 				newUser.setActive(true);
 				newUser.setActivationCode("");
-
 			}
 
-			log.info(String.format("Registration: New user %s (ID %s - email %s - roles %s)", newUser.getUsername(),
-					newUser.getId(), newUser.getMail(), Arrays.toString(newUser.getRoles())));
+			log.info("Registration: New user {} (ID {} - email {} - roles {})", newUser.getUsername(), newUser.getId(),
+					newUser.getMail(), Arrays.toString(newUser.getRoles()));
 
 			dao.insert(newUser);
 
 			return MessageResponse.success(MESSAGE_USER_CREATED);
-
 		} catch (Exception e) {
-
 			return MessageResponse.error(e.getMessage());
-
 		}
 	}
 
-	public MessageResponse activateUser(String username, String code) {
+	@NotNull
+	public MessageResponse activateUser(@NotNull String username, @NotNull String code) {
 		UserDao dao = new UserDao(application.getDatabase());
 		User user = dao.findByUsername(username);
 
 		if (user != null) {
-
 			if (user.getActivationCode() != null && user.getActivationCode().equals(code)) {
-
 				user.setActive(true);
 				user.setActivationCode("");
 				dao.update(user);
 
-				log.info(String.format("User: activated user %s (ID %s - email %s)", user.getUsername(), user.getId(),
-						user.getMail()));
+				log.info("User: activated user {} (ID {} - email {})",
+						user.getUsername(), user.getId(), user.getMail());
 
 				return MessageResponse.success(MESSAGE_USER_ACTIVATED);
-
 			} else {
-
-				log.warn(String.format(
-						"User: code is either incorrect or has already been used for user %s (ID %s - email %s)",
-						user.getUsername(), user.getId(), user.getMail()));
+				log.warn("User: code is either incorrect or has already been used for user {} (ID {} - email {})",
+						user.getUsername(), user.getId(), user.getMail());
 
 				return MessageResponse.error(MESSAGE_WRONG_ACTIVATION_CODE);
-
 			}
-
 		} else {
-
-			log.warn(String.format("User: used activation code for missing or unknown username '%s'", username));
-
+			log.warn("User: used activation code for missing or unknown username '{}'", username);
 			return MessageResponse.error(MESSAGE_WRONG_USERNAME);
-
 		}
+	}
+
+	/**
+	 * Queries the database for all counters related to this user.
+	 * <p>
+	 * Since the database only stores counters for successfully completed jobs, this
+	 * method does not show data for ongoing or failed jobs.
+	 */
+	@NotNull
+	public Map<String, Long> getUserCounters(@NotNull User user) {
+		CounterDao counterDao = new CounterDao(application.getDatabase());
+		Map<String, Long> counters = counterDao.getByUser(user);
+		return counters;
 	}
 }
